--- a/chapter6.tex
+++ b/chapter6.tex
@@ -1882,452 +1882,6 @@ For the $z_3$ components of the electric and magnetic field, these must remain z
 $$\blacklozenge$$
 \newpage
 
-
-
-\section{p238 - Exercise 14a}
-\begin{tcolorbox}
-Taking for the Hertz vector the fundamental solution of the wave equation $\mathbf{6.342}$
-$$\Pi_r=B_r\frac{e^{-ik\left(ct-R\right)}}{R},\quad R^2=z_mz_m$$
-where $B_r$ is a constant vector, show that, for $R$ much less than $\lambda=\frac{2\pi}{k}$, we have approximatively
-$$E_r= -\pdv{}{z^r}\left[B_mz_m\frac{e^{-ikct}}{R^3}\right],$$
-$$H_r= -ik\epsilon_{rmn}B_mz_n\frac{e^{-ikct}}{R^3}.$$
-Show also that for $R$ much greater than $\lambda=\frac{2\pi}{k}$ (wave zone), we have approximatively
-$$E_r= k^2\left(B_rR^2-B_mz_mz_r\right)\frac{e^{-ik(ct-R)}}{R^3},$$
-$$H_r= -k^2\epsilon_{rmn}B_mz_n\frac{e^{-ik(ct-R)}}{R^2}.$$
-(This is the electromagnetic field of the Hertzian dipole oscillation, which is the simplest model of a radio antenna).
-\end{tcolorbox}
-We have $\mathbf{6.341}$:
-\begin{align}
-E_r&= \Pi_{m,mr}-\frac{1}{c^2}\partial^2_t\Pi_r\\
-H_r&= \frac{1}{c}\epsilon_{rpq}\partial_t\Pi_{q,p}
-\end{align}
-and $\mathbf{6.342}$:
-\begin{align}
-\frac{1}{c^2}\partial^2_t\Pi_r-\Pi_{r,mm}=0
-\end{align}
-\textbf{Case $kR<<2\pi$:}\\\\
-In that case $$\Pi_r=B_r\frac{e^{-ik\left(ct-R\right)}}{R} \approx B_r\frac{e^{-ikct}}{R}$$
-and let's express $\Pi_r$ as 
-\begin{align}
-\Pi_r&= B_rF(t)G(z)
-\end{align}
-with
-\\
-\begin{align}
-F(t)&=e^{-ikct}\\
-G(z)&= \frac{1}{R}
-\end{align}
-So (1) can be expressed as 
-\begin{align}
-E_r&= B_mFG_{,mr}-\frac{1}{c^2}B_rGF_{,tt}
-\end{align}
-Let's calculate some necessary derivatives
-\begin{align}
-&R_{,r} = \frac{z_r}{R}\\
-&F_{,t}= -ikcF\\
-&F_{,tt}= -k^2c^2F\\
-&G_{,r} = -\frac{z_r}{R^3}\\
-&\Pi_{m,m} = -B_mz_m\frac{F}{R^3}
-\end{align}
-So, $(7)$ can be expressed as
-\begin{align}
-E_r&= -\left(B_mz_m\frac{F}{R^3}\right)_{,r}+B_r\frac{1}{R}k^2F
-\end{align}
-Consider the expression $\frac{1}{c^2}B_mz_mGF_{,tt}$, then
-\begin{align}
-\left(\frac{1}{c^2}B_mz_mGF_{,tt}\right)_{,r}&= \frac{1}{c^2}B_rGF_{,tt}-\frac{1}{c^2}B_mF_{,tt}z_mz_r\frac{G}{R^2}\left(1-ikR\right)\\
--\left(B_mz_m\frac{1}{R}k^2F\right)_{,r}&= -B_r\frac{1}{R}k^2F+B_mk^2Fz_mz_r\frac{1}{R^3}
-\end{align}
-
-
-
-\section{p238 - Exercise 14b}
-\begin{tcolorbox}
-Taking for the Hertz vector the fundamental solution of the wave equation $\mathbf{6.342}$
-$$\Pi_r=B_r\frac{e^{-ik\left(ct-R\right)}}{R},\quad R^2=z_mz_m$$
-where $B_r$ is a constant vector, show that, for $R$ much less than $\lambda=\frac{2\pi}{k}$, we have approximatively
-$$E_r= -\pdv{}{z^r}\left[B_mz_m\frac{e^{-ikct}}{R^3}\right],$$
-$$H_r= -ik\epsilon_{rmn}B_mz_n\frac{e^{-ikct}}{R^3}.$$
-Show also that for $R$ much greater than $\lambda=\frac{2\pi}{k}$ (wave zone), we have approximatively
-$$E_r= k^2\left(B_rR^2-B_mz_mz_r\right)\frac{e^{-ik(ct-R)}}{R^3},$$
-$$H_r= -k^2\epsilon_{rmn}B_mz_n\frac{e^{-ik(ct-R)}}{R^2}.$$
-(This is the electromagnetic field of the Hertzian dipole oscillation, which is the simplest model of a radio antenna).
-\end{tcolorbox}
-We have $\mathbf{6.341}$:
-\begin{align}
-E_r&= \Pi_{m,mr}-\frac{1}{c^2}\partial^2_t\Pi_r\\
-H_r&= \frac{1}{c}\epsilon_{rpq}\partial_t\Pi_{q,p}
-\end{align}
-and $\mathbf{6.342}$:
-\begin{align}
-\frac{1}{c^2}\partial^2_t\Pi_r-\Pi_{r,mm}=0
-\end{align}
-$(3)$ in $(1)$:
-\begin{align}
-E_r&= \Pi_{m,mr}-\Pi_{r,mm}\\
-\end{align}
-and let's express $\Pi_r$ as 
-\begin{align}
-\Pi_r&= B_rF(t)G(z)
-\end{align}
-with
-\\
-\begin{align}
-F(t)&=e^{-ikct}\\
-G(z)&= \frac{e^{ikR}}{R}
-\end{align}
-So (1) can be expressed as 
-\begin{align}
-E_r&= B_mFG_{,mr}-\frac{1}{c^2}B_rGF_{,tt}
-\end{align}We also know by $\mathbf{6.350}$:
-\begin{align}
-G_{,mm}=-k^2G
-\end{align}
-\begin{align}
-E_r&= \Pi_{m,mr}-\Pi_{r,mm}\\
-&= \Pi_{m,mr}+k^2B_rFG
-\end{align}
-Let's calculate some necessary derivatives
-\begin{align}
-&R_{,r} = \frac{z_r}{R}\\
-&F_{,t}= -ikcF\\
-&F_{,tt}= -k^2c^2F\\
-&G_{,r} = -\frac{z_rG}{R^2}\left(1-ikR\right)\\
-&\Pi_{m,m} = -B_mz_mF\frac{G}{R^2}\left(1-ikR\right)
-\end{align}
-The $(12)$ becomes
-\begin{align}
-E_r&= \Pi_{m,mr}+k^2B_rFG\\
-&= -\left[B_mz_mF\frac{G}{R^2}\left(1-ikR\right)\right]_{,r}+k^2B_rFG\\
-&= -\left[B_mz_mF\frac{G}{R^2}\right]_{,r}+\left[B_mz_mF\frac{G}{R}ik\right]_{,r}+k^2B_rFG\\
-\end{align}
-Consider the expression $\frac{1}{c^2}B_mz_mGF_{,tt}$, then
-\begin{align}
-\left(\frac{1}{c^2}B_mz_mGF_{,tt}\right)_{,r}&= \frac{1}{c^2}B_rGF_{,tt}-\frac{1}{c^2}B_mF_{,tt}z_mz_r\frac{G}{R^2}\left(1-ikR\right)
-\end{align}
-$(16)$ in $(1)$:
-\begin{align}
-E_r&= \Pi_{m,mr}+\frac{1}{c^2}B_mF_{,tt}z_mz_r\frac{G}{R^2}\left(1-ikR\right)-\left(\frac{1}{c^2}B_mz_mGF_{,tt}\right)_{,r}\\
-&= \left[\Pi_{m,m}-\frac{1}{c^2}B_mz_mGF_{,tt}\right]_{,r}+\frac{1}{c^2}B_mF_{,tt}z_mz_r\frac{G}{R^2}\left(1-ikR\right)\\
-&= \left[-B_mz_mF\frac{G}{R^2}\left(1-ikR\right)+\frac{1}{c^2}B_mz_mGk^2c^2F\right]_{,r}-\frac{1}{c^2}B_mk^2c^2Fz_mz_r\frac{G}{R^2}\left(1-ikR\right)\\
-&= \left[-B_mz_mF\frac{G}{R^2}\left(1-ikR\right)+B_mz_mGk^2F\right]_{,r}-B_mk^2Fz_mz_r\frac{G}{R^2}\left(1-ikR\right)
-\end{align}
-\begin{align}
-E_r&= \left\{\begin{array}{l}\left[ikB_mz_mF\frac{G}{R}\right]_{,r}\\\\
--\left[B_mz_mF\frac{G}{R^2}\right]_{,r}\\\\
-+\left[B_mz_mGk^2F\right]_{,r}\\\\
--B_mk^2Fz_mz_r\frac{G}{R^2}\\\\
-+iB_mk^3Fz_mz_r\frac{G}{R}
-\end{array}\right.\\
-&= \left\{\begin{array}{l}
-\left[ikB_mz_mF\frac{G}{R}\right]_{,r}\\\\
--\left[\frac{B_mz_mF}{R^3}(RG)\right]_{,r}\\\\
-+\left[B_mk^2Fz_mG\right]_{,r}\\\\
--B_mk^2Fz_mz_r\frac{G}{R^2}\\\\
-+iB_mk^3Fz_mz_r\frac{G}{R}\\
-\end{array}\right.\\
-&= \left\{\begin{array}{l}
-ikB_rF\frac{G}{R}+ikB_mFz_m\left[\frac{G}{R}\right]_{,r}\\\\
--\left[\frac{B_mz_mF}{R^3}\right]_{,r}(RG)-\frac{B_mz_mF}{R^3}\left[(RG)\right]_{,r}\\\\
-+B_rk^2FG+B_mk^2Fz_m\left[G\right]_{,r}\\\\
--B_mk^2Fz_mz_r\frac{G}{R^2}\\\\
-+iB_mk^3Fz_mz_r\frac{G}{R}
-\end{array}\right.\\
-&= \left\{\begin{array}{l}
-ikB_rF\frac{G}{R}-k^2B_mFz_mz_r\frac{G}{R^2}\\\\
--\left[\frac{B_mz_mF}{R^3}\right]_{,r}(RG)-i\frac{kB_mz_mF}{R^3}z_rG\\\\
-+B_rk^2FG-B_mk^2Fz_m\frac{z_rG}{R^2}+ik^3B_mFz_m\frac{z_rG}{R}\\\\
--k^2B_mFz_mz_r\frac{G}{R^2}\\\\
-+ik^3B_mFz_mz_r\frac{G}{R}
-\end{array}\right.\\
-\end{align}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-\newpage
-**********************************************************
-\begin{align}
-G_{,rm} &= \left\{\begin{array}{l}-\delta_{mr}\frac{G}{R^2}\left(1-ikR\right)\\\\
--\frac{z_r}{R^2}\left(1-ikR\right)G_{,m}\\\\
-+2\frac{z_rG}{R^3}\left(1-ikR\right)R_{,m}\\\\
-+ik\frac{z_rG}{R^2}R_{,m}
-\end{array}\right.\\
-&= \left\{\begin{array}{l}-\delta_{mr}\frac{G}{R^2}\left(1-ikR\right)\\\\
-+\frac{z_r}{R^2}\left(1-ikR\right)\frac{z_rG}{R^2}\left(1-ikR\right)\\\\
-+2\frac{z_rG}{R^3}\left(1-ikR\right)\frac{z_r}{R}\\\\
-+ik\frac{z_rG}{R^2}\frac{z_r}{R}
-\end{array}\right.\\
-&= \left\{\begin{array}{l}-\delta_{mr}\frac{G}{R^2}\left(1-ikR\right)\\\\
-+\frac{z_r^2}{R^4}G-2ik\frac{z_r^2}{R^3}G-k^2\frac{z_r^2}{R^2}G\\\\
-+2\frac{z_r^2G}{R^4}-2ik\frac{z_r^2G}{R^3}\\\\
-+ik\frac{z_r^2G}{R^3}
-\end{array}\right.\\
-&= 3z_r^2\frac{G}{R^4}-k^2z_r^2\frac{G}{R^2}-\delta_{mr}\frac{G}{R^2}+ik\delta_{mr}\frac{G}{R}-3ikz_r^2\frac{G}{R^3}\\
-\Rightarrow\quad G_{,mm}&= 3z_r^2\frac{G}{R^4}-k^2z_r^2\frac{G}{R^2}-3\frac{G}{R^2}+3ik\frac{G}{R}-3ikz_r^2\frac{G}{R^3}\\
-\Rightarrow\quad \Pi_{r,mm}&= 3z_r^2B_rF\frac{G}{R^4}-k^2z_r^2B_rF\frac{G}{R^2}-3B_rF\frac{G}{R^2}+3ikB_rF\frac{G}{R}-3ikz_r^2B_rF\frac{G}{R^3}
-\end{align}
-$(7)$:
-\begin{align}
-E_m&= 3z_r^2B_mF\frac{G}{R^4}-k^2z_r^2B_mF\frac{G}{R^2}-\delta_{mr}B_mF\frac{G}{R^2}+ik\delta_{mr}B_mF\frac{G}{R}-3ikz_m^2B_mF\frac{G}{R^3} +\frac{1}{c^2}B_mGk^2c^2F\\
-&= 3z_r^2B_mF\frac{G}{R^4}-k^2z_r^2B_mF\frac{G}{R^2}-\delta_{mr}B_mF\frac{G}{R^2}+ik\delta_{mr}B_mF\frac{G}{R}-3ikz_m^2B_mF\frac{G}{R^3} +B_mGk^2F
-\end{align}
-$$\blacklozenge$$
-\newpage
-
-
-
-
-\section{p238 - Exercise 14c}
-\begin{tcolorbox}
-Taking for the Hertz vector the fundamental solution of the wave equation $\mathbf{6.342}$
-$$\Pi_r=B_r\frac{e^{-ik\left(ct-R\right)}}{R},\quad R^2=z_mz_m$$
-where $B_r$ is a constant vector, show that, for $R$ much less than $\lambda=\frac{2\pi}{k}$, we have approximatively
-$$E_r= -\pdv{}{z^r}\left[B_mz_m\frac{e^{-ikct}}{R^3}\right],$$
-$$H_r= -ik\epsilon_{rmn}B_mz_n\frac{e^{-ikct}}{R^3}.$$
-Show also that for $R$ much greater than $\lambda=\frac{2\pi}{k}$ (wave zone), we have approximatively
-$$E_r= k^2\left(B_rR^2-B_mz_mz_r\right)\frac{e^{-ik(ct-R)}}{R^3},$$
-$$H_r= -k^2\epsilon_{rmn}B_mz_n\frac{e^{-ik(ct-R)}}{R^2}.$$
-(This is the electromagnetic field of the Hertzian dipole oscillation, which is the simplest model of a radio antenna).
-\end{tcolorbox}
-We have $\mathbf{6.341}$:
-\begin{align}
-E_r&= \Pi_{m,mr}-\frac{1}{c^2}\partial^2_t\Pi_r\\
-H_r&= \frac{1}{c}\epsilon_{rpq}\partial_t\Pi_{q,p}
-\end{align}
-and $\mathbf{6.342}$:
-\begin{align}
-\frac{1}{c^2}\partial^2_t\Pi_r-\Pi_{r,mm}=0
-\end{align}
-$(3)$ in $(1)$:
-\begin{align}
-E_r&= \Pi_{m,mr}-\Pi_{r,mm}\\
-\end{align}
-and let's express $\Pi_r$ as 
-\begin{align}
-\Pi_r&= B_rG(t)F(z)
-\end{align}
-with
-\\
-\begin{align}
-G(t)&=e^{-ikct}\\
-F(z)&= \frac{e^{ikR}}{R}
-\end{align}
-So (3) can be expressed as 
-\begin{align}
-E_r&= B_mGF_{,mr}-B_rGF_{,mm}
-\end{align}We also know by $\mathbf{6.350}$:
-\begin{align}
-F_{,mm}=-k^2F
-\end{align}
-\begin{align}
-E_r&= \Pi_{m,mr}-\Pi_{r,mm}\\
-&= \Pi_{m,mr}+k^2B_rGF
-\end{align}
-Let's calculate some necessary derivatives
-\begin{align}
-&R_{,r} = \frac{z_r}{R}\\
-&F_{,m} = -\frac{z_mF}{R^2}\left(1-ikR\right)\\
-&\Pi_{m,m} = -B_mz_mG\frac{F}{R^2}\left(1-ikR\right)
-\end{align}
-Consider the case $kR<< 2\pi$, then 
-\begin{align}
-F&= \frac{e^ikR}{R}\\
-&\approx \frac{1+ikR}{R}\\
-&=\frac{1}{R}+ik
-\end{align}
-$(15)$
-\begin{align}
-\Pi_{m,m} &= -B_mz_mG\frac{1}{R^3}\left(1+ikR\right)\left(1-ikR\right)\\
- &= -B_mz_mG\frac{1}{R^3}\left(1+k^2R^2\right)
-\end{align}
-$(12)$ becomes
-\begin{align}
-E_r&= \Pi_{m,mr}+k^2B_rGF\\
-&= -\left[B_mz_mG\frac{1}{R^3}\left(1+k^2R^2\right)\right]_{,r}+k^2B_rGF\\
-&= -\left[B_mz_mG\frac{1}{R^3}\right]_{,r}-\left[B_mz_mGk^2\frac{1}{R}\right]_{,r}+k^2B_rGF\\
-&= -\left[B_mz_mG\frac{1}{R^3}\right]_{,r}-B_mz_mGk^2\left[\frac{1}{R}\right]_{,r}-k^2B_rG\frac{1}{R}+k^2B_rGF\\
-&= -\left[B_mz_m\frac{e^{-ikct}}{R^3}\right]_{,r}+k^2B_mz_mGz_r\frac{1}{R^3}-B_rGk^2\frac{1}{R}+k^2B_rG\frac{1}{R}+ik^3B_rG\\
-&= -\left[B_mz_m\frac{e^{-ikct}}{R^3}\right]_{,r}+k^2G\left(B_mz_mz_r\frac{1}{R^3}+ikB_r\right)\\
-\end{align}
-
-$$\blacklozenge$$
-\newpage
-
-
-
-\section{p238 - Exercise 14d}
-\begin{tcolorbox}
-Taking for the Hertz vector the fundamental solution of the wave equation $\mathbf{6.342}$
-$$\Pi_r=B_r\frac{e^{-ik\left(ct-R\right)}}{R},\quad R^2=z_mz_m$$
-where $B_r$ is a constant vector, show that, for $R$ much less than $\lambda=\frac{2\pi}{k}$, we have approximatively
-$$E_r= -\pdv{}{z^r}\left[B_mz_m\frac{e^{-ikct}}{R^3}\right],$$
-$$H_r= -ik\epsilon_{rmn}B_mz_n\frac{e^{-ikct}}{R^3}.$$
-Show also that for $R$ much greater than $\lambda=\frac{2\pi}{k}$ (wave zone), we have approximatively
-$$E_r= k^2\left(B_rR^2-B_mz_mz_r\right)\frac{e^{-ik(ct-R)}}{R^3},$$
-$$H_r= -k^2\epsilon_{rmn}B_mz_n\frac{e^{-ik(ct-R)}}{R^2}.$$
-(This is the electromagnetic field of the Hertzian dipole oscillation, which is the simplest model of a radio antenna).
-\end{tcolorbox}
-We have $\mathbf{6.341}$:
-\begin{align}
-E_r&= \Pi_{m,mr}-\frac{1}{c^2}\partial^2_t\Pi_r\\
-H_r&= \frac{1}{c}\epsilon_{rpq}\partial_t\Pi_{q,p}
-\end{align}
-and $\mathbf{6.342}$:
-\begin{align}
-\frac{1}{c^2}\partial^2_t\Pi_r-\Pi_{r,mm}=0
-\end{align}
-$(3)$ in $(1)$:
-\begin{align}
-E_r&= \Pi_{m,mr}-\Pi_{r,mm}\\
-\end{align}
-and let's express $\Pi_r$ as 
-\begin{align}
-\Pi_r&= B_rG(t)F(z)
-\end{align}
-with
-\\
-\begin{align}
-G(t)&=e^{-ikct}\\
-F(z)&= \frac{e^{ikR}}{R}
-\end{align}
-So (3) can be expressed as 
-\begin{align}
-E_r&= B_mGF_{,mr}-B_rGF_{,mm}
-\end{align}We also know by $\mathbf{6.350}$:
-\begin{align}
-F_{,mm}=-k^2F
-\end{align}
-\begin{align}
-E_r&= \Pi_{m,mr}-\Pi_{r,mm}\\
-&= \Pi_{m,mr}+k^2B_rGF
-\end{align}
-Let's calculate some necessary derivatives
-\begin{align}
-&R_{,r} = \frac{z_r}{R}\\
-&F_{,m} = -\frac{z_mF}{R^2}\left(1-ikR\right)\\
-&\Pi_{m,m} = -B_mz_mG\frac{F}{R^2}\left(1-ikR\right)
-\end{align}
-
-
-$(12)$ becomes
-\begin{align}
-E_r&= \Pi_{m,mr}+k^2B_rGF\\
-&= -\left[B_mz_mG\frac{F}{R^2}\left(1-ikR\right)\right]_{,r}+k^2B_rGF\\
-&= -\left[B_mz_mG\frac{F}{R^2}\right]_{,r}+\left[ikB_mz_mG\frac{F}{R}\right]_{,r}+k^2B_rGF\\
-&= -\left[B_mz_mG\frac{F}{R^2}\right]_{,r}+ikB_rG\frac{F}{R}+ikB_mz_mG\left[\frac{F}{R}\right]_{,r}+k^2B_rGF\\
-&= -\left[B_mz_mG\frac{F}{R^2}\right]_{,r}+ikB_rG\frac{F}{R}+ikB_mz_mG\frac{RF_{,r}-Fz_r\frac{1}{R}}{R^2}+k^2B_rGF\\
-&= -\left[B_mz_mG\frac{F}{R^2}\right]_{,r}+ikB_rG\frac{F}{R}+ikB_mz_mG\frac{1}{R}F_{,r}-ikB_mz_mz_rGF\frac{1}{R^3}+k^2B_rGF\\
-&= -\left[B_mz_mG\frac{F}{R^2}\right]_{,r}+ikB_rG\frac{F}{R}-ikB_mz_mG\frac{z_rF}{R^2}\frac{1}{R}\left(1-ikR\right)-ikB_mz_mz_rGF\frac{1}{R^3}+k^2B_rGF\\
-&= -\left[B_mz_mG\frac{F}{R^2}\right]_{,r}+ikB_rGF\frac{1}{R}-2ikB_mz_mz_rGF\frac{1}{R^3}-k^2B_mz_mz_rGF\frac{1}{R^2}+k^2B_rGF
-\end{align}
-Suppose $kR << \pi$, then $F\approx \left(\frac{1}{R} + ik\right)$\\
-So, 
-\begin{align}
-E_r&=  \left\{\begin{array}{l}-\left[B_mz_mG\frac{\left(\frac{1}{R} + ik\right)}{R^2}\right]_{,r}\\\\
-+ikB_rG\left(\frac{1}{R} + ik\right)\frac{1}{R}\\\\-2ikB_mz_mz_rG\left(\frac{1}{R} + ik\right)\frac{1}{R^3}\\\\-k^2B_mz_mz_rG\left(\frac{1}{R} + ik\right)\frac{1}{R^2}\\\\+k^2B_rG\left(\frac{1}{R} + ik\right)
-\end{array}\right.\\
-&= \left\{\begin{array}{l} -\left[B_mz_mG\frac{1}{R^3}\right]_{,r}\\\\-ikB_rG\frac{1}{R^2}\\\\+2ikB_mz_mG\frac{z_r}{R}\frac{1}{R^3}\\\\+ikB_rG\frac{1}{R}\left(\frac{1}{R} + ik\right)\\\\-2ikB_mz_mz_rG\frac{1}{R^3}\left(\frac{1}{R} + ik\right)\\\\-k^2B_mz_mz_rG\frac{1}{R^2}\left(\frac{1}{R} + ik\right)\\\\+k^2B_rG\left(\frac{1}{R} + ik\right)
-\end{array}\right.\\
-&= \left\{\begin{array}{l} -\left[B_mz_mG\frac{1}{R^3}\right]_{,r}\\\\-ikB_rG\frac{1}{R^2}\\\\+2ikB_mz_mGz_r\frac{1}{R^4}\\\\+ikB_rG\frac{1}{R^2}-k^2B_rG\frac{1}{R}\\\\-2ikB_mz_mz_rG\frac{1}{R^4} +2k^2B_mz_mz_rG\frac{1}{R^3} \\\\-k^2B_mz_mz_rG\frac{1}{R^3} -ik^3B_mz_mz_rG\frac{1}{R^2}\\\\+k^2B_rG\frac{1}{R}+ ik^3B_rG
-\end{array}\right.\\
-\end{align}
-$$\blacklozenge$$
-\newpage
-
-
-
-
-\section{p238 - Exercise 14e}
-\begin{tcolorbox}
-Taking for the Hertz vector the fundamental solution of the wave equation $\mathbf{6.342}$
-$$\Pi_r=B_r\frac{e^{-ik\left(ct-R\right)}}{R},\quad R^2=z_mz_m$$
-where $B_r$ is a constant vector, show that, for $R$ much less than $\lambda=\frac{2\pi}{k}$, we have approximatively
-$$E_r= -\pdv{}{z^r}\left[B_mz_m\frac{e^{-ikct}}{R^3}\right],$$
-$$H_r= -ik\epsilon_{rmn}B_mz_n\frac{e^{-ikct}}{R^3}.$$
-Show also that for $R$ much greater than $\lambda=\frac{2\pi}{k}$ (wave zone), we have approximatively
-$$E_r= k^2\left(B_rR^2-B_mz_mz_r\right)\frac{e^{-ik(ct-R)}}{R^3},$$
-$$H_r= -k^2\epsilon_{rmn}B_mz_n\frac{e^{-ik(ct-R)}}{R^2}.$$
-(This is the electromagnetic field of the Hertzian dipole oscillation, which is the simplest model of a radio antenna).
-\end{tcolorbox}
-We have $\mathbf{6.341}$:
-\begin{align}
-E_r&= \Pi_{m,mr}-\frac{1}{c^2}\partial^2_t\Pi_r\\
-H_r&= \frac{1}{c}\epsilon_{rpq}\partial_t\Pi_{q,p}
-\end{align}
-and $\mathbf{6.342}$:
-\begin{align}
-\frac{1}{c^2}\partial^2_t\Pi_r-\Pi_{r,mm}=0
-\end{align}
-$(3)$ in $(1)$:
-\begin{align}
-E_r&= \Pi_{m,mr}-\Pi_{r,mm}\\
-\end{align}
-and let's express $\Pi_r$ as 
-\begin{align}
-\Pi_r&= B_rG(t)F(z)
-\end{align}
-with
-\\
-\begin{align}
-G(t)&=e^{-ikct}\\
-F(z)&= \frac{e^{ikR}}{R}
-\end{align}
-So (3) can be expressed as 
-\begin{align}
-E_r&= B_mGF_{,mr}-B_rGF_{,mm}
-\end{align}We also know by $\mathbf{6.350}$:
-\begin{align}
-F_{,mm}=-k^2F
-\end{align}
-\begin{align}
-E_r&= \Pi_{m,mr}-\Pi_{r,mm}\\
-&= \Pi_{m,mr}+k^2B_rGF
-\end{align}
-From $\mathbf{6.348}$ we have
-\begin{align}
-F^{'} &= \left(\frac{ik}{R}-\frac{1}{R^2}\right)e^{ikR}
-\end{align}
-Let's calculate some necessary derivatives
-\begin{align}
-&R_{,r} = \frac{z_r}{R}\\
-&F_{,m} = F^{'}R_{,r}=z_m\left(\frac{ik}{R}-\frac{1}{R^2}\right)F\\
-&\Pi_{m,m} = B_mz_mG\left(\frac{ik}{R}-\frac{1}{R^2}\right)F
-\end{align}
-
-
-$(12)$ becomes
-\begin{align}
-E_r&= \Pi_{m,mr}+k^2B_rGF\\
-&= -\left[B_mz_mG\frac{1}{R^3}\left(1-ikR\right)\right]_{,r}+k^2B_rGF\\
-&= -\left[B_mz_mG\frac{1}{R^3}\right]_{,r}+\left[ikB_mz_mG\frac{F}{R}\right]_{,r}+k^2B_rGF\\
-&= -\left[B_mz_mG\frac{1}{R^3}\right]_{,r}+ikB_rG\frac{F}{R}+ikB_mz_mG\left[\frac{F}{R}\right]_{,r}+k^2B_rGF\\
-&= -\left[B_mz_mG\frac{1}{R^3}\right]_{,r}+ikB_rG\frac{F}{R}+ikB_mz_mG\frac{RF_{,r}-Fz_r\frac{1}{R}}{R^2}+k^2B_rGF\\
-&= -\left[B_mz_mG\frac{1}{R^3}\right]_{,r}+ikB_rG\frac{F}{R}+ikB_mz_mG\frac{1}{R}F_{,r}-ikB_mz_mz_rGF\frac{1}{R^3}+k^2B_rGF\\
-&= -\left[B_mz_mG\frac{1}{R^3}\right]_{,r}+ikB_rG\frac{F}{R}-ikB_mz_mG\frac{z_rF}{R^2}\frac{1}{R}\left(1-ikR\right)-ikB_mz_mz_rGF\frac{1}{R^3}+k^2B_rGF\\
-&= -\left[B_mz_mG\frac{1}{R^3}\right]_{,r}+ikB_rG\frac{F}{R}-ikB_mz_mz_rGF\frac{1}{R^3}-k^2B_mz_mz_rGF\frac{1}{R^2}-ikB_mz_mz_rGF\frac{1}{R^3}+k^2B_rGF\\
-&= -\left[B_mz_mG\frac{1}{R^3}\right]_{,r}+GF\frac{k}{R^3}\left[kR\left(R^2B_r-B_mz_mz_r\right)+i\left(R^2B_r-2B_mz_mz_r\right)\right]\\
-\end{align}
-
-$$\blacklozenge$$
-\newpage
-
-
-
-
 \section{p238 - Exercise 14}
 \begin{tcolorbox}
 Taking for the Hertz vector the fundamental solution of the wave equation $\mathbf{6.342}$
@@ -2435,6 +1989,42 @@ as $ \frac{1}{kR}>>\frac{1}{k^2R^2}$ we discard the real part of the complex num
 H_r&=  k^2\epsilon_{rpq}B_qz_pGF\frac{1}{R}\\
 &= -k^2\epsilon_{rmn}B_mz_n\frac{e^{-ik(ct-R)}}{R^2}
 \end{align}
-so indeed $$\mathbf{H_r\approx -k^2\epsilon_{rmn}B_mz_n\frac{e^{-ik(ct-R)}}{R^2}}$$
+so indeed $$\mathbf{H_n\approx -k^2\epsilon_{rpq}B_pz_q\frac{e^{-ik(ct-R)}}{R^2}}$$
+Lets now look at the electric field
+\begin{align}
+H_{n,m}&= -k^2\epsilon_{npq}B_pG\left[z_qF\frac{1}{R}\right]_{,m}\\
+&= -k^2\epsilon_{npq}B_pG\left[z_q\right]_{,m}F\frac{1}{R}-k^2\epsilon_{npq}B_pGz_q\left[F\right]_{,m}\frac{1}{R}-k^2\epsilon_{npq}B_pGz_qF\left[\frac{1}{R}\right]_{,m}\\
+&= -k^2\epsilon_{npm}B_pGF\frac{1}{R}-k^2\epsilon_{npq}B_pGz_qF^{'}R_{,m}\frac{1}{R}+k^2\epsilon_{npq}B_pGz_qF\frac{R_{,m}}{R^2}\\
+&= -k^2\epsilon_{npm}B_pGF\frac{1}{R}-k^2\epsilon_{npq}B_pGz_q\left(\frac{ik}{R}-\frac{1}{R^2}\right)e^{ikR}\frac{z_m}{R}\frac{1}{R}+k^2\epsilon_{npq}B_pGz_qF\frac{z_{,m}}{R^3}\\
+&= -k^2\epsilon_{npm}B_pGF\frac{1}{R}-k^2\epsilon_{npq}B_pGz_qk^2\left(\frac{i}{kR}-\frac{1}{k^2R^2}\right)e^{ikR}\frac{z_m}{R}\frac{1}{R}+k^2\epsilon_{npq}B_pGz_qF\frac{z_{m}}{R^3}\\
+\end{align}
+Again we can approximate by dropping the real part in $\left(\frac{i}{kR}-\frac{1}{k^2R^2}\right)$ as $Rk>> 2\pi$, so
+\begin{align}
+H_{n,m}&-k^2\epsilon_{npm}B_pGF\frac{1}{R}-ik^3\epsilon_{npq}B_pGz_qFz_m\frac{1}{R^2}+k^2\epsilon_{npq}B_pGz_qF\frac{z_{m}}{R^3}
+\end{align}
+Lets' multiply $(43)$ by $\epsilon_{rmn}$
+Again we can approximate by dropping the real part in $\left(\frac{i}{kR}-\frac{1}{k^2R^2}\right)$ as $Rk>> 2\pi$, so
+\begin{align}
+\epsilon_{rmn}H_{n,m}&=\left\{\begin{array}{l}
+-k^2\underbrace{\epsilon_{rmn}\epsilon_{npm}}_{=2\delta_{rp}}B_pGF\frac{1}{R}\\\\-ik^3\underbrace{\epsilon_{rmn}\epsilon_{npq}}_{=\delta_{pr}\delta_{mq}-\delta_{pm}\delta_{rq}}B_pGz_qFz_m\frac{1}{R^2}\\\\+k^2\underbrace{\epsilon_{rmn}\epsilon_{npq}}_{=\delta_{pr}\delta_{mq}-\delta_{pm}\delta_{rq}}B_pGz_qF\frac{z_{m}}{R^3}\end{array}\right.\\
+&=\left\{\begin{array}{l}
+-2k^2B_rGF\frac{1}{R}\\\\-ik^3B_rGF\underbrace{z_mz_m}_{=R^2}\frac{1}{R^2}+ik^3B_mz_mz_rGF\frac{1}{R^2}\\\\
++k^2B_r\underbrace{z_{m}z_m}_{=R^2}GF\frac{1}{R^3}-k^2B_mz_{m}z_rFG\frac{1}{R^3}
+\end{array}\right.\\
+&=\left\{\begin{array}{l}
+-k^2B_rGF\frac{1}{R}-k^2B_mz_{m}z_rFG\frac{1}{R^3}\\\\-ik^3B_rGF+ik^3B_mz_mz_rGF\frac{1}{R^2}
+\end{array}\right.
+\end{align}
+Again we approximate by dropping the real part as $Rk>> 2\pi$:
+\begin{align}
+\epsilon_{rmn}H_{n,m}&=
+-ik^3\left(R^2B_r+B_mz_mz_r\right)GF\frac{1}{R^2}
+\end{align}
+and as $\frac{1}{c}\partial_t E_r = \epsilon_{rmn}H_{n,m}$, and integrating along $t$ we get 
+\begin{align}
+E_r&=-ick^3\left(R^2B_r+B_mz_mz_r\frac{1}{R^2}\right)\frac{G}{-ikc}F\frac{1}{R^2}\\
+&=k^2\left(R^2B_r+B_mz_mz_r\right)\frac{e^{-ikc(t-R)}}{R^3}
+\end{align}
+so indeed $$\mathbf{E_r\approx k^2\left(R^2B_r+B_mz_mz_r\right)\frac{e^{-ikc(t-R)}}{R^3}}$$
 $$\blacklozenge$$
 \newpage
